--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "node-rsa": "^1.0.5",
+    "pub": "^0.2.0",
+    "pug": "^2.0.3",
     "request": "^2.88.0"
   },
   "devDependencies": {
